# Philote-JuliaServer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  wrap_all_methods.txt
.github/workflows/: build.yml  release.yml
cmake/: FindJulia.cmake
examples/: README.md  paraboloid.yaml  quadratic.yaml  simple_test.jl  simple_test.yaml  simple_test_client.cpp  test_client.py
examples/test_disciplines/: error_discipline.jl  multi_output.jl  paraboloid.jl
include/: julia_config.h  julia_convert.h  julia_executor.h  julia_explicit_discipline.h  julia_gc.h  julia_implicit_discipline.h  julia_runtime.h  julia_thread.h
src/: julia_config.cpp  julia_convert.cpp  julia_executor.cpp  julia_explicit_discipline.cpp  julia_gc.cpp  julia_implicit_discipline.cpp  julia_runtime.cpp  julia_thread.cpp  main.cpp
test/: CMakeLists.txt  test_helpers.cpp  test_helpers.h  test_integration.cpp  test_julia_config.cpp  test_julia_convert.cpp  test_julia_executor.cpp  test_julia_explicit_discipline.cpp  test_julia_runtime.cpp  test_julia_thread.cpp  test_main.cpp
